--- a/postman/reports/html/index.html
+++ b/postman/reports/html/index.html
@@ -15,17 +15,77 @@
     <table style="width: 60%;" class="table table-bordered mb-5">
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
-<tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>39.463</td></tr><tr><td><a href="./Containers.postman_collection.html">Containers.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>448.538</td></tr><tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1858.202</td></tr><tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>579.606</td></tr><tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>13.755</td></tr><tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>30.04</td></tr><tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>23.042</td></tr><tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>172.582</td></tr><tr><td><a href="./Template_Resource.postman_collection.html">Template Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>659.984</td></tr><tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1221.851</td></tr>        </tbody>
+<tr><td><a href="./Add-Remove_Contentlet_from_a_Page.postman_collection.html">Add-Remove Contentlet from a Page.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>117.718</td></tr><tr><td><a href="./ApiToken_Resource.postman_collection.html">ApiToken Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>212.183</td></tr><tr><td><a href="./Apps.postman_collection.html">Apps.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>63.923</td></tr><tr><td><a href="./BringBack.postman_collection.html">BringBack.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>103.242</td></tr><tr><td><a href="./Browser_Resource.postman_collection.html">Browser Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>35.729</td></tr><tr><td><a href="./Bundle_Resource.postman_collection.html">Bundle Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>114.467</td></tr><tr><td><a href="./CacheResource.postman_collection.html">CacheResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>27.954</td></tr><tr><td><a href="./Category.postman_collection.html">Category.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>245.573</td></tr><tr><td><a href="./ConfigurationResource.postman_collection.html">ConfigurationResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>17.27</td></tr><tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>41.058</td></tr><tr><td><a href="./Containers.postman_collection.html">Containers.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>449.678</td></tr><tr><td><a href="./ContentResourceV1.postman_collection.html">ContentResourceV1.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>216.081</td></tr><tr><td><a href="./ContentTypeResourceTests.html">ContentTypeResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>249.335</td></tr><tr><td><a href="./Content_Resource.postman_collection.html">Content Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>268.433</td></tr><tr><td><a href="./CreateAdvanceTemplateOnSpecificHost.postman_collection.html">CreateAdvanceTemplateOnSpecificHost.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>20.31</td></tr><tr><td><a href="./DotAsset-MultiPart-TempFile.postman_collection.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>14.993</td></tr><tr><td><a href="./DotAsset.postman_collection.html">DotAsset.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>43.121</td></tr><tr><td><a href="./DotFavoritePage.postman_collection.html">DotFavoritePage.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>51.123</td></tr><tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>10.986</td></tr><tr><td><a href="./Experiment_Result.postman_collection.html">Experiment Result.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>20.347</td></tr><tr><td><a href="./Experiments_Resource.postman_collection.html">Experiments Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>817.837</td></tr><tr><td><a href="./FolderResource.postman_collection.html">FolderResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>109.666</td></tr><tr><td><a href="./ForgotPasswordResource.postman_collection.html">ForgotPasswordResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>1.262</td></tr><tr><td><a href="./Form_Resource.postman_collection.html">Form Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>35.237</td></tr><tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>2036.57</td></tr><tr><td><a href="./Image.postman_collection.html">Image.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>51.215</td></tr><tr><td><a href="./Integrity_Checker_From_Sender.postman_collection.html">Integrity Checker From Sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>107.771</td></tr><tr><td><a href="./Integrity_Checker_JWT_Token_Test.postman_collection.html">Integrity Checker JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>88.836</td></tr><tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>143.54</td></tr><tr><td><a href="./Logger_Resource.postman_collection.html">Logger Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>23.311</td></tr><tr><td><a href="./Maintenance_Resource.html">Maintenance Resource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>1.205</td></tr><tr><td><a href="./Maintenance_Resource_-_Donwload_Assets.html">Maintenance Resource - Donwload Assets.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>9.119</td></tr><tr><td><a href="./Maintenance_Resource_-_Donwload_Log_File.html">Maintenance Resource - Donwload Log File.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>12.605</td></tr><tr><td><a href="./Maintenance_Resource_-_Download_DB_Dump.html">Maintenance Resource - Download DB Dump.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>11.716</td></tr><tr><td><a href="./Maintenance_Resource_-_Download_Starter.html">Maintenance Resource - Download Starter.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>14.47</td></tr><tr><td><a href="./Manifest_Download_End_Point.postman_collection.html">Manifest Download End Point.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>43.981</td></tr><tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>155.623</td></tr><tr><td><a href="./Osgi.postman_collection.html">Osgi.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>8.056</td></tr><tr><td><a href="./Page_Version_with_diferrent_Templates.postman_collection.html">Page Version with diferrent Templates.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>100.808</td></tr><tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>578.788</td></tr><tr><td><a href="./Permission_Resource.postman_collection.html">Permission Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>71.268</td></tr><tr><td><a href="./PortletResource.html">PortletResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>60.773</td></tr><tr><td><a href="./Promote_Variant.postman_collection.html">Promote Variant.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>5.17</td></tr><tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>8.332</td></tr><tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>29.867</td></tr><tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>22.784</td></tr><tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>138.4</td></tr><tr><td><a href="./Reltionship_cache_in_push_publish.postman_collection.html">Reltionship_cache_in_push_publish.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>31.502</td></tr><tr><td><a href="./ResourceLink.postman_collection.html">ResourceLink.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>24.484</td></tr><tr><td><a href="./RoleResource.postman_collection.html">RoleResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>29.274</td></tr><tr><td><a href="./Save_Layout_With_Relative_Path.postman_collection.html">Save Layout With Relative Path.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>70.963</td></tr><tr><td><a href="./Scripting_Resource.postman_collection.html">Scripting Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>15.035</td></tr><tr><td><a href="./Site_Resource.postman_collection.html">Site Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>251.737</td></tr><tr><td><a href="./System.postman_collection.html">System.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>14.141</td></tr><tr><td><a href="./SystemTable.postman_collection.html">SystemTable.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>38.364</td></tr><tr><td><a href="./TagsResource.html">TagsResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>96.056</td></tr><tr><td><a href="./TempAPI.postman_collection.html">TempAPI.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>5.461</td></tr><tr><td><a href="./Template_Resource.postman_collection.html">Template Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>627.138</td></tr><tr><td><a href="./ThemeResource.postman_collection.html">ThemeResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>17.141</td></tr><tr><td><a href="./ToolGroupResource.postman_collection.html">ToolGroupResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>65.441</td></tr><tr><td><a href="./UserResource.postman_collection.html">UserResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>20.268</td></tr><tr><td><a href="./User_Include_Into_Experiment.postman_collection.html">User Include Into Experiment.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>142.535</td></tr><tr><td><a href="./VanityURL.postman_collection.html">VanityURL.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>34.19</td></tr><tr><td><a href="./Velocity.postman_collection.html">Velocity.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>24.308</td></tr><tr><td><a href="./VelocityMacro.postman_collection.html">VelocityMacro.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>38.738</td></tr><tr><td><a href="./VelocitySecrets.postman_collection.html">VelocitySecrets.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>11.066</td></tr><tr><td><a href="./VersionableResource.postman_collection.html">VersionableResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>147.71</td></tr><tr><td><a href="./Visitor.postman_collection.html">Visitor.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>33.457</td></tr><tr><td><a href="./WebAssets.postman_collection.html">WebAssets.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>102.48</td></tr><tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>1213.946</td></tr>        </tbody>
     </table>
 </div>
 </body>
