--- a/postman/reports/html/pp.html
+++ b/postman/reports/html/pp.html
@@ -17,13 +17,13 @@
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
 <tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>9.146</td></tr>
-<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>138.285</td></tr>
+      <td>23.123</td></tr>
+<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>141.282</td></tr>
 <tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>22.796</td></tr>
+      <td>24.317</td></tr>
 <tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>29.948</td></tr>
+      <td>30.746</td></tr>
         </tbody>
     </table>
 </div>
