--- a/postman/reports/html/pp.html
+++ b/postman/reports/html/pp.html
@@ -17,13 +17,13 @@
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
 <tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>20.516</td></tr>
-<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>141.328</td></tr>
+      <td>22.891</td></tr>
+<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>140.62</td></tr>
 <tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>24.346</td></tr>
+      <td>24.548</td></tr>
 <tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>30.64</td></tr>
+      <td>30.722</td></tr>
         </tbody>
     </table>
 </div>
