--- a/postman/reports/html/workflow.html
+++ b/postman/reports/html/workflow.html
@@ -16,8 +16,8 @@
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
-<tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1212.018</td></tr>
+<tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>1238.393</td></tr>
         </tbody>
     </table>
 </div>
