--- a/postman/reports/html/graphql.html
+++ b/postman/reports/html/graphql.html
@@ -16,8 +16,8 @@
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
-<tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>2009.368</td></tr>
+<tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>2272.203</td></tr>
         </tbody>
     </table>
 </div>
