--- a/postman/reports/html/pp.html
+++ b/postman/reports/html/pp.html
@@ -17,13 +17,13 @@
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
 <tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>26.316</td></tr>
-<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>141.23</td></tr>
+      <td>21.065</td></tr>
+<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>140.296</td></tr>
 <tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>24.468</td></tr>
+      <td>26.683</td></tr>
 <tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>30.702</td></tr>
+      <td>30.354</td></tr>
         </tbody>
     </table>
 </div>
